[Added] Insertion Sort

--- a/Sort-Algorithms.ipynb
+++ b/Sort-Algorithms.ipynb
@@ -31,12 +31,14 @@
     "## Worst Case Complexity: O(N^2)\n",
     "\n",
     "\n",
-    "### Tip: It's easy to check when the list is already sorted"
+    "### Tip: It's easy to check when the list is already sorted\n",
+    "\n",
+    "The Bubble Sort examines the array in pairs, compairing each N and N+1 element of the array, and swapping positions everytime N > N + 1. By doing this, the algorithm guarantees that after the Nth pass, the Nth biggest element will be in it's right position. In other words, after each full pass, the biggest element of the sub array examined \"bubbles up\" to the right most position of the sub array."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -46,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "Array found to be sorted already. Breaking to prevent further unecessary iterations\n",
-      "[2, 3, 28, 40, 68, 78, 78, 82, 116, 152, 152, 153, 159, 160, 160, 167, 167, 172, 180, 182, 191, 203, 227, 229, 231, 237, 237, 250, 251, 262, 269, 278, 295, 309, 318, 347, 350, 378, 423, 440, 447, 460, 471, 472, 484, 497, 509, 515, 531, 543, 566, 572, 593, 603, 605, 615, 617, 618, 630, 633, 638, 641, 644, 644, 674, 678, 679, 684, 718, 723, 735, 741, 747, 767, 779, 796, 806, 820, 824, 828, 838, 842, 848, 860, 874, 874, 876, 897, 903, 903, 913, 917, 937, 939, 953, 964, 969, 976, 979, 983, 996]\n"
+      "Sorted: [2, 3, 28, 40, 68, 78, 78, 82, 116, 152, 152, 153, 159, 160, 160, 167, 167, 172, 180, 182, 191, 203, 227, 229, 231, 237, 237, 250, 251, 262, 269, 278, 295, 309, 318, 347, 350, 378, 423, 440, 447, 460, 471, 472, 484, 497, 509, 515, 531, 543, 566, 572, 593, 603, 605, 615, 617, 618, 630, 633, 638, 641, 644, 644, 674, 678, 679, 684, 718, 723, 735, 741, 747, 767, 779, 796, 806, 820, 824, 828, 838, 842, 848, 860, 874, 874, 876, 897, 903, 903, 913, 917, 937, 939, 953, 964, 969, 976, 979, 983, 996]\n"
      ]
     }
    ],
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -121,15 +123,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Insertion Sort\n",
+    "\n",
+    "## Average Case Complexity: O(N^2)\n",
+    "## Worst Case Complexity: O(N^2/2)\n",
+    "## Best Case Complexity: O(N)\n",
+    "\n",
+    "\n",
+    "### TIP: In Place, uses N memory space\n",
+    "\n",
+    "The insertion sort, although still O(n2), works in a slightly different way. It always maintains a sorted sublist in the lower positions of the list. Each new item is then “inserted” back into the previous sublist such that the sorted sublist is one item larger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted: [2, 3, 28, 40, 68, 78, 78, 82, 116, 152, 152, 153, 159, 160, 160, 167, 167, 172, 180, 182, 191, 203, 227, 229, 231, 237, 237, 250, 251, 262, 269, 278, 295, 309, 318, 347, 350, 378, 423, 440, 447, 460, 471, 472, 484, 497, 509, 515, 531, 543, 566, 572, 593, 603, 605, 615, 617, 618, 630, 633, 638, 641, 644, 644, 674, 678, 679, 684, 718, 723, 735, 741, 747, 767, 779, 796, 806, 820, 824, 828, 838, 842, 848, 860, 874, 874, 876, 897, 903, 903, 913, 917, 937, 939, 953, 964, 969, 976, 979, 983, 996]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def insertion_sort(array):\n",
+    "    \n",
+    "    # Iterating N times, where N is the size of the list\n",
+    "    for n in range(1, len(array)):\n",
+    "        \n",
+    "        current_value = array[n]\n",
+    "        current_index = n\n",
+    "        \n",
+    "        # While it does not reach the first element of the sublist, and \n",
+    "        # while each element is smaller than the previous one, it will keep swapping and walking backwards on the list\n",
+    "        while current_index > 0 and array[current_index - 1] > current_value:\n",
+    "            \n",
+    "            # Swaps the current element with the one just before it\n",
+    "            array[current_index] = array[current_index - 1]\n",
+    "            \n",
+    "            # Decrements the current position\n",
+    "            current_index = current_index - 1\n",
+    "            \n",
+    "        # At the end of the inner loop, paste the current value into the last position checked\n",
+    "        array[current_index] = current_value\n",
+    "        \n",
+    "# Running It\n",
+    "array = list(global_array)\n",
+    "insertion_sort(array)\n",
+    "print 'Sorted: %s' % array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "\n"
-   ]
+   "source": []
   }
  ],
  "metadata": {
