--- a/Sort-Algorithms.ipynb
+++ b/Sort-Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "Array found to be sorted already. Breaking to prevent further unecessary iterations\n",
-      "Sorted: [2, 3, 28, 40, 68, 78, 78, 82, 116, 152, 152, 153, 159, 160, 160, 167, 167, 172, 180, 182, 191, 203, 227, 229, 231, 237, 237, 250, 251, 262, 269, 278, 295, 309, 318, 347, 350, 378, 423, 440, 447, 460, 471, 472, 484, 497, 509, 515, 531, 543, 566, 572, 593, 603, 605, 615, 617, 618, 630, 633, 638, 641, 644, 644, 674, 678, 679, 684, 718, 723, 735, 741, 747, 767, 779, 796, 806, 820, 824, 828, 838, 842, 848, 860, 874, 874, 876, 897, 903, 903, 913, 917, 937, 939, 953, 964, 969, 976, 979, 983, 996]\n"
+      "Sorted: [25, 28, 32, 39, 40, 40, 56, 63, 63, 73, 73, 80, 86, 88, 95, 100, 109, 143, 145, 145, 151, 176, 204, 206, 220, 266, 280, 283, 285, 290, 291, 303, 303, 318, 323, 326, 346, 360, 376, 388, 404, 408, 414, 418, 437, 441, 446, 456, 460, 466, 469, 489, 493, 504, 512, 541, 542, 549, 563, 580, 586, 589, 590, 592, 603, 611, 622, 637, 638, 641, 645, 659, 685, 689, 711, 735, 740, 741, 748, 755, 762, 766, 782, 786, 798, 799, 808, 813, 835, 856, 865, 898, 906, 920, 921, 937, 949, 949, 951, 967, 988]\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -99,17 +99,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted: [2, 3, 28, 40, 68, 78, 78, 82, 116, 152, 152, 153, 159, 160, 160, 167, 167, 172, 180, 182, 191, 203, 227, 229, 231, 237, 237, 250, 251, 262, 269, 278, 295, 309, 318, 347, 350, 378, 423, 440, 447, 460, 471, 472, 484, 497, 509, 515, 531, 543, 566, 572, 593, 603, 605, 615, 617, 618, 630, 633, 638, 641, 644, 644, 674, 678, 679, 684, 718, 723, 735, 741, 747, 767, 779, 796, 806, 820, 824, 828, 838, 842, 848, 860, 874, 874, 876, 897, 903, 903, 913, 917, 937, 939, 953, 964, 969, 976, 979, 983, 996]\n"
+      "Sorted: [25, 28, 32, 39, 40, 40, 56, 63, 63, 73, 73, 80, 86, 88, 95, 100, 109, 143, 145, 145, 151, 176, 204, 206, 220, 266, 280, 283, 285, 290, 291, 303, 303, 318, 323, 326, 346, 360, 376, 388, 404, 408, 414, 418, 437, 441, 446, 456, 460, 466, 469, 489, 493, 504, 512, 541, 542, 549, 563, 580, 586, 589, 590, 592, 603, 611, 622, 637, 638, 641, 645, 659, 685, 689, 711, 735, 740, 741, 748, 755, 762, 766, 782, 786, 798, 799, 808, 813, 835, 856, 865, 898, 906, 920, 921, 937, 949, 949, 951, 967, 988]\n"
      ]
     }
    ],
    "source": [
     "def pythonic_bubble_sort(array):\n",
-    "    iterations = len(array) - 1\n",
+    "    start = len(array) - 1\n",
     "    stop = 0\n",
     "    step = -1\n",
     "    \n",
-    "    for num_pass in range(iterations, stop, step):\n",
+    "    for num_pass in range(start, stop, step):\n",
     "            for n in range(num_pass):\n",
     "                \n",
     "                # Swap\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted: [2, 3, 28, 40, 68, 78, 78, 82, 116, 152, 152, 153, 159, 160, 160, 167, 167, 172, 180, 182, 191, 203, 227, 229, 231, 237, 237, 250, 251, 262, 269, 278, 295, 309, 318, 347, 350, 378, 423, 440, 447, 460, 471, 472, 484, 497, 509, 515, 531, 543, 566, 572, 593, 603, 605, 615, 617, 618, 630, 633, 638, 641, 644, 644, 674, 678, 679, 684, 718, 723, 735, 741, 747, 767, 779, 796, 806, 820, 824, 828, 838, 842, 848, 860, 874, 874, 876, 897, 903, 903, 913, 917, 937, 939, 953, 964, 969, 976, 979, 983, 996]\n"
+      "Sorted: [25, 28, 32, 39, 40, 40, 56, 63, 63, 73, 73, 80, 86, 88, 95, 100, 109, 143, 145, 145, 151, 176, 204, 206, 220, 266, 280, 283, 285, 290, 291, 303, 303, 318, 323, 326, 346, 360, 376, 388, 404, 408, 414, 418, 437, 441, 446, 456, 460, 466, 469, 489, 493, 504, 512, 541, 542, 549, 563, 580, 586, 589, 590, 592, 603, 611, 622, 637, 638, 641, 645, 659, 685, 689, 711, 735, 740, 741, 748, 755, 762, 766, 782, 786, 798, 799, 808, 813, 835, 856, 865, 898, 906, 920, 921, 937, 949, 949, 951, 967, 988]\n"
      ]
     }
    ],
@@ -182,13 +182,64 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Selection Sort\n",
+    "\n",
+    "## Average Case: O(N^2)\n",
+    "## Worst Case: O(N^2)\n",
+    "## Best Case: O(N^2)\n",
+    "\n",
+    "The Selection Sort Algorithm \"wins\" by it's simplicity compared to other algorithms, and so as the ones mentioned so far, it's also an \"in-place\" implementation, needing only \"N\" memory.\n",
+    "\n",
+    "The way it works is by building a sorted sub-list from the left to the right within the array, making sure that after each \"nth\" pass, the \"nth\" smaller element is at it's place. It scans the original array \"n\" times, making \"n-1\" comparissons at each scan, adding the smallest element to the end of the sub-list it \"creates\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted: [638, 466, 541, 590, 326, 735, 741, 685, 290, 967, 512, 755, 504, 813, 951, 95, 589, 414, 786, 645, 748, 63, 291, 906, 856, 782, 563, 388, 798, 360, 88, 446, 109, 808, 437, 318, 920, 176, 40, 408, 283, 637, 988, 418, 220, 949, 303, 441, 766, 622, 659, 549, 469, 799, 921, 56, 592, 143, 580, 456, 86, 603, 39, 303, 835, 740, 611, 460, 63, 898, 266, 346, 949, 762, 285, 73, 145, 376, 100, 32, 80, 404, 145, 28, 865, 151, 711, 206, 586, 689, 493, 323, 40, 73, 489, 280, 641, 542, 937, 25, 204]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def selection_sort(array):\n",
+    "    \n",
+    "    array_length = len(array)\n",
+    "    \n",
+    "    # Iterating through the array \"n\" times\n",
+    "    for n in range(len(array) - 1):\n",
+    "        \n",
+    "        # Control Variables\n",
+    "        iterations = (array_length - n)\n",
+    "        current_min = n\n",
+    "        start_index = n + 1\n",
+    "        \n",
+    "        # Iterating from the element right before the end of the sublist, until the remainder of the array\n",
+    "        for idx in range(iterations, start_index, 1):\n",
+    "            if array[idx] < array[current_min]:\n",
+    "                current_min = idx\n",
+    "            \n",
+    "        # Do we have to swap ? (Have we found a new \"Minimum\" ?)\n",
+    "        if current_min is not n:\n",
+    "            array[n], array[current_min] = array[current_min], array[n]    \n",
+    "    \n",
+    "# Running It\n",
+    "array = list(global_array)\n",
+    "selection_sort(array)\n",
+    "print 'Sorted: %s' % array\n"
+   ]
   },
   {
    "cell_type": "code",
