[Fixed] Selection Sort Algorithm

--- a/Sort-Algorithms.ipynb
+++ b/Sort-Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -209,27 +209,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted: [638, 466, 541, 590, 326, 735, 741, 685, 290, 967, 512, 755, 504, 813, 951, 95, 589, 414, 786, 645, 748, 63, 291, 906, 856, 782, 563, 388, 798, 360, 88, 446, 109, 808, 437, 318, 920, 176, 40, 408, 283, 637, 988, 418, 220, 949, 303, 441, 766, 622, 659, 549, 469, 799, 921, 56, 592, 143, 580, 456, 86, 603, 39, 303, 835, 740, 611, 460, 63, 898, 266, 346, 949, 762, 285, 73, 145, 376, 100, 32, 80, 404, 145, 28, 865, 151, 711, 206, 586, 689, 493, 323, 40, 73, 489, 280, 641, 542, 937, 25, 204]\n"
+      "Sorted: [13, 16, 23, 26, 30, 51, 56, 56, 61, 89, 93, 114, 122, 134, 143, 143, 162, 172, 181, 204, 205, 213, 218, 230, 240, 248, 263, 280, 294, 341, 353, 353, 356, 356, 359, 376, 384, 397, 397, 402, 406, 410, 432, 438, 445, 455, 466, 481, 482, 494, 501, 520, 532, 539, 548, 561, 564, 587, 590, 595, 596, 597, 607, 611, 661, 668, 673, 675, 682, 690, 704, 709, 719, 726, 727, 728, 729, 735, 779, 784, 799, 812, 825, 841, 855, 861, 862, 882, 906, 917, 917, 933, 934, 936, 958, 960, 975, 975, 990, 994, 997]\n"
      ]
     }
    ],
    "source": [
     "def selection_sort(array):\n",
-    "    \n",
-    "    array_length = len(array)\n",
-    "    \n",
+    "        \n",
     "    # Iterating through the array \"n\" times\n",
     "    for n in range(len(array) - 1):\n",
     "        \n",
     "        # Control Variables\n",
-    "        iterations = (array_length - n)\n",
     "        current_min = n\n",
     "        start_index = n + 1\n",
     "        \n",
     "        # Iterating from the element right before the end of the sublist, until the remainder of the array\n",
-    "        for idx in range(iterations, start_index, 1):\n",
-    "            if array[idx] < array[current_min]:\n",
-    "                current_min = idx\n",
+    "        for i in range(start_index, len(array)):\n",
+    "            if array[i] < array[current_min]:\n",
+    "                current_min = i\n",
     "            \n",
     "        # Do we have to swap ? (Have we found a new \"Minimum\" ?)\n",
     "        if current_min is not n:\n",
@@ -267,7 +264,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.9"
   }
  },
  "nbformat": 4,
