[Added] QuickSort + Partition

--- a/Sort-Algorithms.ipynb
+++ b/Sort-Algorithms.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -48,7 +48,7 @@
      "output_type": "stream",
      "text": [
       "Array found to be sorted already. Breaking to prevent further unecessary iterations\n",
-      "Sorted: [25, 28, 32, 39, 40, 40, 56, 63, 63, 73, 73, 80, 86, 88, 95, 100, 109, 143, 145, 145, 151, 176, 204, 206, 220, 266, 280, 283, 285, 290, 291, 303, 303, 318, 323, 326, 346, 360, 376, 388, 404, 408, 414, 418, 437, 441, 446, 456, 460, 466, 469, 489, 493, 504, 512, 541, 542, 549, 563, 580, 586, 589, 590, 592, 603, 611, 622, 637, 638, 641, 645, 659, 685, 689, 711, 735, 740, 741, 748, 755, 762, 766, 782, 786, 798, 799, 808, 813, 835, 856, 865, 898, 906, 920, 921, 937, 949, 949, 951, 967, 988]\n"
+      "Sorted: [6, 12, 15, 27, 33, 38, 47, 79, 91, 139, 140, 142, 145, 149, 163, 174, 187, 194, 208, 208, 211, 223, 226, 230, 236, 245, 267, 271, 294, 307, 312, 314, 330, 341, 347, 350, 355, 361, 363, 378, 383, 387, 399, 404, 410, 428, 433, 434, 458, 458, 484, 495, 500, 508, 529, 538, 542, 549, 558, 571, 577, 578, 603, 605, 638, 651, 660, 680, 683, 696, 697, 717, 722, 736, 750, 771, 772, 772, 794, 818, 819, 825, 828, 836, 852, 854, 864, 868, 877, 884, 897, 897, 909, 914, 916, 933, 952, 960, 975, 986, 986]\n"
      ]
     }
    ],
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted: [25, 28, 32, 39, 40, 40, 56, 63, 63, 73, 73, 80, 86, 88, 95, 100, 109, 143, 145, 145, 151, 176, 204, 206, 220, 266, 280, 283, 285, 290, 291, 303, 303, 318, 323, 326, 346, 360, 376, 388, 404, 408, 414, 418, 437, 441, 446, 456, 460, 466, 469, 489, 493, 504, 512, 541, 542, 549, 563, 580, 586, 589, 590, 592, 603, 611, 622, 637, 638, 641, 645, 659, 685, 689, 711, 735, 740, 741, 748, 755, 762, 766, 782, 786, 798, 799, 808, 813, 835, 856, 865, 898, 906, 920, 921, 937, 949, 949, 951, 967, 988]\n"
+      "Sorted: [6, 12, 15, 27, 33, 38, 47, 79, 91, 139, 140, 142, 145, 149, 163, 174, 187, 194, 208, 208, 211, 223, 226, 230, 236, 245, 267, 271, 294, 307, 312, 314, 330, 341, 347, 350, 355, 361, 363, 378, 383, 387, 399, 404, 410, 428, 433, 434, 458, 458, 484, 495, 500, 508, 529, 538, 542, 549, 558, 571, 577, 578, 603, 605, 638, 651, 660, 680, 683, 696, 697, 717, 722, 736, 750, 771, 772, 772, 794, 818, 819, 825, 828, 836, 852, 854, 864, 868, 877, 884, 897, 897, 909, 914, 916, 933, 952, 960, 975, 986, 986]\n"
      ]
     }
    ],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -149,7 +149,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted: [25, 28, 32, 39, 40, 40, 56, 63, 63, 73, 73, 80, 86, 88, 95, 100, 109, 143, 145, 145, 151, 176, 204, 206, 220, 266, 280, 283, 285, 290, 291, 303, 303, 318, 323, 326, 346, 360, 376, 388, 404, 408, 414, 418, 437, 441, 446, 456, 460, 466, 469, 489, 493, 504, 512, 541, 542, 549, 563, 580, 586, 589, 590, 592, 603, 611, 622, 637, 638, 641, 645, 659, 685, 689, 711, 735, 740, 741, 748, 755, 762, 766, 782, 786, 798, 799, 808, 813, 835, 856, 865, 898, 906, 920, 921, 937, 949, 949, 951, 967, 988]\n"
+      "Sorted: [6, 12, 15, 27, 33, 38, 47, 79, 91, 139, 140, 142, 145, 149, 163, 174, 187, 194, 208, 208, 211, 223, 226, 230, 236, 245, 267, 271, 294, 307, 312, 314, 330, 341, 347, 350, 355, 361, 363, 378, 383, 387, 399, 404, 410, 428, 433, 434, 458, 458, 484, 495, 500, 508, 529, 538, 542, 549, 558, 571, 577, 578, 603, 605, 638, 651, 660, 680, 683, 696, 697, 717, 722, 736, 750, 771, 772, 772, 794, 818, 819, 825, 828, 836, 852, 854, 864, 868, 877, 884, 897, 897, 909, 914, 916, 933, 952, 960, 975, 986, 986]\n"
      ]
     }
    ],
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -209,7 +209,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Sorted: [13, 16, 23, 26, 30, 51, 56, 56, 61, 89, 93, 114, 122, 134, 143, 143, 162, 172, 181, 204, 205, 213, 218, 230, 240, 248, 263, 280, 294, 341, 353, 353, 356, 356, 359, 376, 384, 397, 397, 402, 406, 410, 432, 438, 445, 455, 466, 481, 482, 494, 501, 520, 532, 539, 548, 561, 564, 587, 590, 595, 596, 597, 607, 611, 661, 668, 673, 675, 682, 690, 704, 709, 719, 726, 727, 728, 729, 735, 779, 784, 799, 812, 825, 841, 855, 861, 862, 882, 906, 917, 917, 933, 934, 936, 958, 960, 975, 975, 990, 994, 997]\n"
+      "Sorted: [6, 12, 15, 27, 33, 38, 47, 79, 91, 139, 140, 142, 145, 149, 163, 174, 187, 194, 208, 208, 211, 223, 226, 230, 236, 245, 267, 271, 294, 307, 312, 314, 330, 341, 347, 350, 355, 361, 363, 378, 383, 387, 399, 404, 410, 428, 433, 434, 458, 458, 484, 495, 500, 508, 529, 538, 542, 549, 558, 571, 577, 578, 603, 605, 638, 651, 660, 680, 683, 696, 697, 717, 722, 736, 750, 771, 772, 772, 794, 818, 819, 825, 828, 836, 852, 854, 864, 868, 877, 884, 897, 897, 909, 914, 916, 933, 952, 960, 975, 986, 986]\n"
      ]
     }
    ],
@@ -239,6 +239,102 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# Quick Sort\n",
+    "\n",
+    "## Average Case: O(N Log N)\n",
+    "## Worst Case: O(N^2)\n",
+    "## Best Case: O(N Log N)\n",
+    "\n",
+    "The Quicksort algorithm is an in place sorting method, meaning that it will not utilise extra memory other than the one already allocated for the array itself. This method works by picking a \"Pivot\" and calling the \"Partition\" method over this \"Pivot\" element.\n",
+    "\n",
+    "There are specific \"Pivot Picking\" methods that can optimize your algorithm, but the default one is to just pick the \"right-most\" element of your sub-array. Once the pivot is selected, the partition method takes place. The partition is responsible for making sure that, for any given pivot, all the elements with values less than the pivot, will be at it's left side, while the elements with value higher than the pivot, will be at it's right side. It means that, after every iteration, the pivot will be in it's proper place. After each iteration, the \"Partition\" method is called recursively to the sub-arrays generated around the pivot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorted: [6, 12, 15, 27, 33, 38, 47, 79, 91, 139, 140, 142, 145, 149, 163, 174, 187, 194, 208, 208, 211, 223, 226, 230, 236, 245, 267, 271, 294, 307, 312, 314, 330, 341, 347, 350, 355, 361, 363, 378, 383, 387, 399, 404, 410, 428, 433, 434, 458, 458, 484, 495, 500, 508, 529, 538, 542, 549, 558, 571, 577, 578, 603, 605, 638, 651, 660, 680, 683, 696, 697, 717, 722, 736, 750, 771, 772, 772, 794, 818, 819, 825, 828, 836, 852, 854, 864, 868, 877, 884, 897, 897, 909, 914, 916, 933, 952, 960, 975, 986, 986]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Starting with the \"Partition\" Method, that is responsible for selecting a \"Pivot\" element and ensure that all elements \" < than\"\n",
+    "# the Pivot, will be on it's left, while the elements \"> than\" the Pivot, will be on it's right\n",
+    "def partition(lst, start, end):\n",
+    "    # Arbitraty Pivot Selection (Last element)\n",
+    "    pivot = lst[end]\n",
+    "    bottom = start - 1 # By starting this with (start - 1) it's value wont be messed once we increment it right at the beginning of the BOTTOM loop\n",
+    "    top = end # By starting this with (end) it's value wont be messed once we decrement it at the beggining of the TOP loop\n",
+    "    \n",
+    "    should_break = False\n",
+    "    while not should_break:\n",
+    "    \n",
+    "        # Bottom Loop - Looking for one element that's > than the Pivot\n",
+    "        while not should_break:\n",
+    "            bottom = bottom + 1\n",
+    "\n",
+    "            # Stop Condition = Bottom and top are the same index\n",
+    "            if bottom is top:\n",
+    "                should_break = True\n",
+    "                break\n",
+    "            \n",
+    "            # Changing this element with the one on the current top\n",
+    "            if lst[bottom] > pivot:\n",
+    "                lst[top] = lst[bottom]\n",
+    "                break\n",
+    "            \n",
+    "        # Top Loop - Looking for one element that's < than the Pivot\n",
+    "        while not should_break:\n",
+    "            top = top - 1\n",
+    "            \n",
+    "            if bottom is top:\n",
+    "                should_break = True\n",
+    "                break\n",
+    "                \n",
+    "            # Changing this element with the one on the current top\n",
+    "            if lst[top] < pivot:\n",
+    "                lst[bottom] = lst[top]\n",
+    "                break\n",
+    "                \n",
+    "    # Time to Put the Pivot into it's right place\n",
+    "    lst[top] = pivot\n",
+    "    return top # New Split Point\n",
+    "\n",
+    "\n",
+    "def quick_sort(lst, start, end):\n",
+    "    \n",
+    "    if start > end:\n",
+    "        return\n",
+    "    \n",
+    "    # Splitpoint\n",
+    "    split_point = partition(lst, start, end)\n",
+    "    \n",
+    "    # Recursivelly partitioning the list\n",
+    "    quick_sort(lst, start, split_point - 1)\n",
+    "    quick_sort(lst, split_point + 1, end)\n",
+    "    \n",
+    "# Running It\n",
+    "array = list(global_array)\n",
+    "quick_sort(array, 0, len(array) - 1)\n",
+    "print 'Sorted: %s' % array\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -264,7 +360,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
