--- a/Maximum Sum Subarray Problem.ipynb
+++ b/Maximum Sum Subarray Problem.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -41,8 +41,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First Array Max Sum: 7\n",
-      "Second Array Max Sum: 4\n"
+      "[Brute-Force] First Array Max Sum: 7\n",
+      "[Brute-Force] Second Array Max Sum: 4\n"
      ]
     }
    ],
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -107,7 +107,7 @@
     "    global_max = current_max = array[0]\n",
     "    \n",
     "    start_index = 1 # Since the global_max is already the first one, we can skip it without ruining the logic\n",
-    "    iterations = len(array) - 1 # \"N-1\" since we skipped the first element already\n",
+    "    iterations = len(array) # Until N = Len(Array)\n",
     "    step = 1 # Iteration step = 1\n",
     "    \n",
     "    # Iteration starting from the second element\n",
@@ -123,8 +123,8 @@
     "    return global_max        \n",
     "  \n",
     "# Running it\n",
-    "print '[Kadane\\'s] First Array Max Sum: %d' % brute_force_solution(first_array)\n",
-    "print '[Kadane\\'s] Second Array Max Sum: %d' % brute_force_solution(second_array)\n",
+    "print '[Kadane\\'s] First Array Max Sum: %d' % maximum_sum_sub_array(first_array)\n",
+    "print '[Kadane\\'s] Second Array Max Sum: %d' % maximum_sum_sub_array(second_array)\n",
     "    "
    ]
   },
@@ -154,7 +154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
